# logsys

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.in  Jamroot.jam  README.md
examples/: CMakeLists.txt  log_01.cpp  log_02.cpp  log_body_01.cpp  log_body_02.cpp  log_body_03.cpp  log_catch_01.cpp  log_catch_02.cpp  log_catch_03.cpp  log_catch_04.cpp
include/log/: log.hpp  log_base.hpp  log_tag.hpp  stdlog.hpp  stdlogd.hpp
include/logsys/: basic_log_base.hpp  is_valid.hpp  log.hpp  log_base.hpp  log_ref.hpp  optional.hpp  stdlog.hpp  stdlogb.hpp  stdlogb_factory_object.hpp  stdlogd.hpp
include/logsys/detail/: extract_log_t.hpp  log_impl.hpp  log_trait.hpp  type_traits.hpp
script/: build.sh  prepare.sh
src/: log_base.cpp  stdlogb.cpp  stdlogb_factory_object.cpp
test/: CMakeLists.txt  Jamroot.jam  extract_log_t.cpp  is_valid.cpp  log.cpp  log_trait.cpp  optional.cpp  test1.cpp  test2.cpp  type_traits.cpp
test-package/header-only/: CMakeLists.txt  test.cpp
test-package/lib/: CMakeLists.txt  test.cpp
